Bugfix: immutable collections